--- a/css/app.scss
+++ b/css/app.scss
@@ -1,4 +1,11 @@
+$white-color: #fff;
+$black-color: #000;
+$nav-color: #999999;
+$nav-background-color: #f5f5f5;
 $services-background: #2D9BEA;
+
+$raleway-font: 'Raleway', sans-serif;
+$source-sans-font: 'Source Sans Pro', sans-serif;
 
 * {
     box-sizing: border-box;
@@ -6,11 +13,75 @@ $services-background: #2D9BEA;
     padding: 0;
 }
 
+h1,h2,h3,h4,h5,h6 {
+    font-family: $raleway-font;
+    margin: 0;
+}
+
+li {
+    list-style-type: none;
+}
+
+p {
+    font-family: $source-sans-font;
+}
+
 #intro {
     background: url('https://demo.goodlayers.com/infinite/homepages/onepage/wp-content/uploads/sites/2/2016/05/bg-1.jpg') no-repeat center;
+    background-attachment: fixed;
     background-size: cover;
     height: 100vh;
-    padding: 0 40px;
+    padding: 90px 40px 30px 40px;
+    color: $white-color;
+
+    h1 {
+        font-family: $raleway-font;
+        font-size: 140px;
+        font-weight: 700;
+        padding: 0 15px 60px 15px;
+        text-transform: uppercase;
+        line-height: 1.2;
+        letter-spacing: 1px;
+    }
+
+    h3 {
+        font-size: 36px;
+        font-weight: 300;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        padding: 0 15px;
+    }
+
+    .intro-box {
+        margin-right: 40px;
+        margin-bottom: 30px;
+
+        &.last {
+            margin-right: 0;
+        }
+
+        h5 {
+            font-size: 16px;
+            font-weight: 600;
+            letter-spacing: 1px;
+            margin-bottom: 20px;
+            color: $services-background;
+            text-transform: uppercase;
+        }
+
+        p {
+            font-size: 15px;
+            margin-bottom: 20px;
+            line-height: 1.7;
+        }
+
+        .intro-box-icon {
+            margin-bottom: 28px;
+            i {
+                font-size: 30px;
+            }
+        }
+    }
 }
 
 #services {
