--- a/css/layout.css
+++ b/css/layout.css
@@ -25,7 +25,7 @@
   display: block;
   font-family: "Raleway", sans-serif;
   font-size: 13px;
-  font-weight: bold;
+  font-weight: 800;
   color: #999999;
   text-transform: uppercase;
   letter-spacing: 0.5px;
@@ -42,5 +42,30 @@
 .side-nav-container .page-logo img {
   width: 170px;
   height: 51px;
+}
+
+.side-nav-container .sth {
+  position: absolute;
+  bottom: 200px;
+  margin: 0 auto;
+}
+
+.side-nav-container .sth li {
+  display: inline-block;
+}
+
+.side-nav-container .sth li a i {
+  font-size: 14px;
+  margin-right: 25px;
+  color: #545454;
+  opacity: 1;
+}
+
+.side-nav-container .sth li a i:last-item {
+  margin-right: 0;
+}
+
+.grid-container.full {
+  margin-left: 340px;
 }
 /*# sourceMappingURL=layout.css.map */
