Add accordion, nav.

--- a/css/app.css
+++ b/css/app.css
@@ -4,7 +4,12 @@
   padding: 0;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   font-family: "Raleway", sans-serif;
   margin: 0;
 }
@@ -21,14 +26,19 @@ p {
   background: url("https://demo.goodlayers.com/infinite/homepages/onepage/wp-content/uploads/sites/2/2016/05/bg-1.jpg") no-repeat center;
   background-attachment: fixed;
   background-size: cover;
-  height: 100vh;
-  padding: 90px 40px 30px 40px;
   color: #fff;
+  margin-top: 82px;
 }
 
-#intro h1 {
+#intro .intro-wrapper {
+  padding: 90px 0 0 0;
+  width: 95%;
+  margin: 0 auto;
+}
+
+#intro .intro-wrapper h1 {
   font-family: "Raleway", sans-serif;
-  font-size: 140px;
+  font-size: 40px;
   font-weight: 700;
   padding: 0 15px 60px 15px;
   text-transform: uppercase;
@@ -36,7 +46,13 @@ p {
   letter-spacing: 1px;
 }
 
-#intro h3 {
+@media screen and (min-width: 768px) {
+  #intro .intro-wrapper h1 {
+    font-size: 140px;
+  }
+}
+
+#intro .intro-wrapper h3 {
   font-size: 36px;
   font-weight: 300;
   letter-spacing: 2px;
@@ -44,16 +60,16 @@ p {
   padding: 0 15px;
 }
 
-#intro .intro-box {
-  margin-right: 40px;
-  margin-bottom: 30px;
+#intro .intro-wrapper .intro-box {
+  margin: 0 40px 30px 0;
+  padding: 0 15px;
 }
 
-#intro .intro-box.last {
+#intro .intro-wrapper .intro-box.last {
   margin-right: 0;
 }
 
-#intro .intro-box h5 {
+#intro .intro-wrapper .intro-box h5 {
   font-size: 16px;
   font-weight: 600;
   letter-spacing: 1px;
@@ -62,21 +78,72 @@ p {
   text-transform: uppercase;
 }
 
-#intro .intro-box p {
+#intro .intro-wrapper .intro-box p {
   font-size: 15px;
   margin-bottom: 20px;
   line-height: 1.7;
 }
 
-#intro .intro-box .intro-box-icon {
+#intro .intro-wrapper .intro-box .intro-box-icon {
   margin-bottom: 28px;
 }
 
-#intro .intro-box .intro-box-icon i {
+#intro .intro-wrapper .intro-box .intro-box-icon i {
   font-size: 30px;
+}
+
+@media screen and (min-width: 768px) {
+  #intro {
+    margin-top: 0;
+  }
+  #intro .intro-wrapper {
+    width: 90%;
+  }
+  #intro .intro-wrapper h1 {
+    font-size: 140px;
+  }
 }
 
 #services {
   background: #2D9BEA;
+  padding: 120px 0;
+}
+
+#services .accordion {
+  width: 70%;
+  background: none;
+}
+
+#services .accordion-title {
+  font-family: "Raleway", sans-serif;
+  font-size: 14px;
+  font-weight: 600;
+  color: #fff;
+  background: #2D9BEA;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin-bottom: 10px;
+  border: none;
+}
+
+#services .accordion-content {
+  color: #c6def1;
+  background: #2D9BEA;
+  border: none;
+}
+
+#services .accordion-content p {
+  font-size: 15px;
+  line-height: 1.7;
+  padding: 5px 0 15px;
+}
+
+#services .accordion-title::before {
+  display: inline-block;
+  font-size: 30px;
+  font-weight: 200;
+  background: #308acb;
+  padding: 8px 15px;
+  max-width: 44px;
 }
 /*# sourceMappingURL=app.css.map */
