--- a/css/layout.css
+++ b/css/layout.css
@@ -1,71 +1,128 @@
 .side-nav-container {
+  width: 100%;
   position: fixed;
-  float: left;
   background: #f5f5f5;
-  padding: 0 70px;
 }
 
-.side-nav-container .side-nav {
-  height: 100vh;
-  margin: 0;
+.side-nav-container #header {
+  position: relative;
+  background: #f5f5f5;
+  margin: 0 8px;
 }
 
-.side-nav-container .side-nav li {
-  width: 200px;
-  list-style-type: none;
-  padding: 16px 0;
-  border-bottom: 1px solid #e2e2e2;
+.side-nav-container #header .page-logo {
+  display: inline-block;
+  padding: 15px 0 15px 25px;
 }
 
-.side-nav-container .side-nav li:first-child {
-  padding: 0 0 16px;
-}
-
-.side-nav-container .side-nav li a {
-  display: block;
-  font-family: "Raleway", sans-serif;
-  font-size: 13px;
-  font-weight: 800;
-  color: #999999;
-  text-transform: uppercase;
-  letter-spacing: 0.5px;
-}
-
-.side-nav-container .side-nav li a:hover {
-  color: #000;
-}
-
-.side-nav-container .page-logo {
-  padding: 77px 0 67px 0;
-}
-
-.side-nav-container .page-logo img {
+.side-nav-container #header .page-logo img {
   width: 170px;
   height: 51px;
 }
 
-.side-nav-container .sth {
+.side-nav-container #header .page-nav-btn {
   position: absolute;
-  bottom: 200px;
-  margin: 0 auto;
+  top: 25px;
+  right: 15px;
+  padding: 2px 7px;
+  border: 2px solid #dddddd;
+  color: #000;
 }
 
-.side-nav-container .sth li {
-  display: inline-block;
+@media screen and (min-width: 560px) {
+  .side-nav-container #header {
+    margin: 0 80px;
+  }
+  .side-nav-container #header .page-nav-btn {
+    right: 25px;
+  }
 }
 
-.side-nav-container .sth li a i {
-  font-size: 14px;
-  margin-right: 25px;
-  color: #545454;
-  opacity: 1;
+@media screen and (min-width: 620px) {
+  .side-nav-container #header {
+    margin: 0 40px;
+  }
+  .side-nav-container #header .page-nav-btn {
+    right: 0;
+  }
 }
 
-.side-nav-container .sth li a i:last-item {
-  margin-right: 0;
+.side-nav-container .side-nav {
+  display: none;
 }
 
-.grid-container.full {
-  margin-left: 340px;
+.side-nav-container .side-nav-social {
+  display: none;
+}
+
+@media screen and (min-width: 1000px) {
+  .side-nav-container {
+    width: auto;
+    float: left;
+    padding: 0 70px;
+  }
+  .side-nav-container #header {
+    margin: 0;
+    background: none;
+  }
+  .side-nav-container #header .page-logo {
+    padding: 77px 0 67px 0;
+  }
+  .side-nav-container #header .page-logo img {
+    width: 170px;
+    height: 51px;
+  }
+  .side-nav-container #header .page-nav-btn {
+    display: none;
+  }
+  .side-nav-container .side-nav {
+    display: inline-block;
+    height: 100vh;
+    margin: 0;
+  }
+  .side-nav-container .side-nav li {
+    width: 200px;
+    padding: 16px 0;
+    border-bottom: 1px solid #e2e2e2;
+  }
+  .side-nav-container .side-nav li:first-child {
+    padding: 0 0 16px;
+  }
+  .side-nav-container .side-nav li a {
+    display: block;
+    font-family: "Raleway", sans-serif;
+    font-size: 13px;
+    font-weight: 800;
+    color: #999999;
+    text-transform: uppercase;
+    letter-spacing: 0.5px;
+  }
+  .side-nav-container .side-nav li a:hover {
+    color: #000;
+  }
+  .side-nav-container .side-nav-social {
+    display: block;
+    position: absolute;
+    bottom: 200px;
+    margin: 0 auto;
+  }
+  .side-nav-container .side-nav-social li {
+    display: inline-block;
+  }
+  .side-nav-container .side-nav-social li a i {
+    font-size: 14px;
+    margin-right: 25px;
+    color: #545454;
+    opacity: 1;
+  }
+  .side-nav-container .side-nav-social li a i:last-item {
+    margin-right: 0;
+  }
+}
+
+@media screen and (min-width: 1000px) {
+  .grid-container.full {
+    margin-left: 340px;
+  }
 }
 /*# sourceMappingURL=layout.css.map */
