--- a/css/layout.scss
+++ b/css/layout.scss
@@ -1,61 +1,119 @@
+// Color variables
 $white-color: #fff;
 $black-color: #000;
 $nav-color: #999999;
 $nav-background-color: #f5f5f5;
 $social-icon-color: #545454;
+// Font variables
 $raleway-font: 'Raleway',
 sans-serif;
+// Breakpoint variables
+$break-medium: 1000px;
+$break-tablet: 768px;
 .side-nav-container {
+    width: 100%;
     position: fixed;
-    float: left;
     background: $nav-background-color;
-    padding: 0 70px;
-    .side-nav {
-        height: 100vh;
-        margin: 0;
-        li {
-            width: 200px;
-            list-style-type: none;
-            padding: 16px 0;
-            border-bottom: 1px solid #e2e2e2;
-            &:first-child {
-                padding: 0 0 16px;
+    #header {
+        position: relative;
+        background: $nav-background-color;
+        margin: 0 8px;
+        .page-logo {
+            display: inline-block;
+            padding: 15px 0 15px 25px;
+            img {
+                width: 170px;
+                height: 51px;
             }
-            a {
-                display: block;
-                font-family: $raleway-font;
-                font-size: 13px;
-                font-weight: 800;
-                color: $nav-color;
-                text-transform: uppercase;
-                letter-spacing: 0.5px;
-                &:hover {
-                    color: $black-color;
+        }
+        .page-nav-btn {
+            position: absolute;
+            top: 25px;
+            right: 15px;
+            padding: 2px 7px;
+            border: 2px solid #dddddd;
+            color: $black-color;
+        }
+
+        @media screen and (min-width: 560px) {
+            margin: 0 80px;
+            .page-nav-btn {
+                right: 25px;
+            }
+        }
+
+        @media screen and (min-width: 620px) {
+            margin: 0 40px;
+            .page-nav-btn {
+                right: 0;
+            }
+        }
+    }
+    .side-nav {
+        display: none;
+    }
+    .side-nav-social {
+        display: none;
+    }
+    @media screen and (min-width: $break-medium) {
+        width: auto;
+        float: left;
+        padding: 0 70px;
+        #header {
+            margin: 0;
+            background: none;
+            .page-logo {
+                padding: 77px 0 67px 0;
+                img {
+                    width: 170px;
+                    height: 51px;
+                }
+            }
+            .page-nav-btn {
+                display: none;
+            }
+        }
+        .side-nav {
+            display: inline-block;
+            height: 100vh;
+            margin: 0;
+            li {
+                width: 200px;
+                padding: 16px 0;
+                border-bottom: 1px solid #e2e2e2;
+                &:first-child {
+                    padding: 0 0 16px;
+                }
+                a {
+                    display: block;
+                    font-family: $raleway-font;
+                    font-size: 13px;
+                    font-weight: 800;
+                    color: $nav-color;
+                    text-transform: uppercase;
+                    letter-spacing: 0.5px;
+                    &:hover {
+                        color: $black-color;
+                    }
                 }
             }
         }
-    }
-    .page-logo {
-        padding: 77px 0 67px 0;
-        img {
-            width: 170px;
-            height: 51px;
-        }
-    }
-    .sth {
-        position: absolute;
-        bottom: 200px;
-        margin: 0 auto;
-        li {
-            display: inline-block;
-            a {
-                i {
-                    font-size: 14px;
-                    margin-right: 25px;
-                    color: $social-icon-color;
-                    opacity: 1;
-                    &:last-item {
-                        margin-right: 0;
+        .side-nav-social {
+            display: block;
+            position: absolute;
+            bottom: 200px;
+            margin: 0 auto;
+            li {
+                display: inline-block;
+                a {
+                    i {
+                        font-size: 14px;
+                        margin-right: 25px;
+                        color: $social-icon-color;
+                        opacity: 1;
+                        &:last-item {
+                            margin-right: 0;
+                        }
                     }
                 }
             }
@@ -64,5 +122,7 @@ sans-serif;
 }
 
 .grid-container.full {
-    margin-left: 340px;
+    @media screen and (min-width: $break-medium) {
+        margin-left: 340px;
+    }
 }
