--- a/css/app.scss
+++ b/css/app.scss
@@ -3,13 +3,16 @@ $black-color: #000;
 $nav-color: #999999;
 $nav-background-color: #f5f5f5;
 $services-background: #2D9BEA;
+$benefit-blue-box-background: #4FA3E0;
+$benefit-red-box-background: #EF5D5D;
+$benefit-purple-box-background: #915FD5;
 $raleway-font: 'Raleway',
 sans-serif;
 $source-sans-font: 'Source Sans Pro',
 sans-serif;
 $break-tablet: 768px;
 * {
-    box-sizing: border-box;
+    blue-box-sizing: border-blue-box;
     margin: 0;
     padding: 0;
 }
@@ -37,54 +40,51 @@ p {
     background-attachment: fixed;
     background-size: cover; //height: 100vh;
     color: $white-color;
+    padding: 90px 0 30px;
     margin-top: 82px;
-    .intro-wrapper {
-        padding: 90px 0 0 0;
-        width: 95%;
-        margin: 0 auto;
-        h1 {
-            font-family: $raleway-font;
-            font-size: 40px;
-            font-weight: 700;
-            padding: 0 15px 60px 15px;
-            text-transform: uppercase;
-            line-height: 1.2;
+    min-height: 100vh;
+    h1 {
+        font-family: $raleway-font;
+        font-size: 40px;
+        font-weight: 700;
+        padding: 0 15px 60px 15px;
+        text-transform: uppercase;
+        line-height: 1.2;
+        letter-spacing: 1px;
+        @media screen and (min-width: $break-tablet) {
+            font-size: 140px;
+        }
+    }
+    h3 {
+        font-size: 36px;
+        font-weight: 300;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        padding: 0 15px;
+    }
+    .intro-blue-box {
+        margin: 0 40px 30px 0;
+        padding: 0 15px;
+        &.last {
+            margin-right: 0;
+        }
+        h5 {
+            font-size: 16px;
+            font-weight: 600;
             letter-spacing: 1px;
-            @media screen and (min-width: $break-tablet) {
-                font-size: 140px;
-            }
-        }
-        h3 {
-            font-size: 36px;
-            font-weight: 300;
-            letter-spacing: 2px;
+            margin-bottom: 20px;
+            color: $services-background;
             text-transform: uppercase;
-            padding: 0 15px;
         }
-        .intro-box {
-            margin: 0 40px 30px 0;
-            padding: 0 15px;
-            &.last {
-                margin-right: 0;
-            }
-            h5 {
-                font-size: 16px;
-                font-weight: 600;
-                letter-spacing: 1px;
-                margin-bottom: 20px;
-                color: $services-background;
-                text-transform: uppercase;
-            }
-            p {
-                font-size: 15px;
-                margin-bottom: 20px;
-                line-height: 1.7;
-            }
-            .intro-box-icon {
-                margin-bottom: 28px;
-                i {
-                    font-size: 30px;
-                }
+        p {
+            font-size: 15px;
+            margin-bottom: 20px;
+            line-height: 1.7;
+        }
+        .intro-blue-box-icon {
+            margin-bottom: 28px;
+            i {
+                font-size: 30px;
             }
         }
     }
@@ -102,8 +102,9 @@ p {
 #services {
     background: $services-background;
     padding: 120px 0;
+    min-height: 100vh;
     .accordion {
-        width: 70%;
+        //width: 70%;
         background: none;
     }
     .accordion-title {
@@ -111,13 +112,12 @@ p {
         font-size: 14px;
         font-weight: 600;
         color: $white-color;
-        background:$services-background;
+        background: $services-background;
         text-transform: uppercase;
         letter-spacing: 1px;
         margin-bottom: 10px;
         border: none;
     }
-
     .accordion-content {
         color: #c6def1;
         background: $services-background;
@@ -128,13 +128,92 @@ p {
             padding: 5px 0 15px;
         }
     }
-
     .accordion-title::before {
         display: inline-block;
+        top: 15px;
+        left: -60px;
         font-size: 30px;
         font-weight: 200;
         background: #308acb;
         padding: 8px 15px;
-        max-width: 44px;
+        width: 52.11px;
+        text-align: center;
+    }
+    .is-active .accordion-title::before {
+        background: none;
+        border: 2px solid #308acb;
+    }
+}
+
+#statistic {
+    background: url("https://demo.goodlayers.com/infinite/homepages/onepage/wp-content/uploads/sites/2/2016/05/bg-2.jpg") no-repeat center center;
+    background-size: cover;
+    background-attachment: fixed;
+    padding: 160px 0 110px;
+    color: white;
+    line-height: 1.7;
+    .statistic-item {
+        padding: 0 15px 30px;
+        text-align: center;
+        h4 {
+            font-family: $raleway-font;
+            font-size: 45px;
+            margin-bottom: 25px;
+            text-transform: uppercase;
+        }
+        h5 {
+            font-family: $source-sans-font;
+            font-size: 16px;
+            font-weight: 400;
+            text-transform: uppercase;
+        }
+        .divider {
+            display: block;
+            width: 20px;
+            margin: 0px auto 25px;
+            border-color: $white-color;
+            border-bottom-width: 2px;
+            border-bottom-style: solid;
+        }
+    }
+}
+
+#benefit {
+    color: $white-color;
+    .benefit-item {
+        padding: 75px 80px 50px;
+        line-height: 1.7;
+        text-align: center;
+        .benefit-item-icon {
+            margin-bottom: 28px;
+        }
+        h4 {
+            font-family: $raleway-font;
+            font-size: 18px;
+            font-weight: 600;
+            padding-top: 5px;
+            letter-spacing: 2px;
+            text-transform: uppercase;
+        }
+        h6 {
+            font-family: $source-sans-font;
+            font-size: 14px;
+            font-style: italic;
+            margin: 5px 0 27px;
+        }
+        p {
+            font-family: $source-sans-font;
+            font-size: 15px;
+            margin-bottom: 20px;
+        }
+    }
+    .blue {
+        background: $benefit-blue-box-background;
+    }
+    .red {
+        background: $benefit-red-box-background;
+    }
+    .purple {
+        background: $benefit-purple-box-background;
     }
 }
